--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<div id="app"></div>
+<html>
+
+<head>
+    <title>CSS Active Highlighter</title>
+    <script type="module" src="./index.ts"></script>
+</head>
+
+<body>
+    <div id="app"></div>
+</body>
+
+</html>
