--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>CSS Active Highlighter</title>
-    <script type="module" src="./index.ts"></script>
+    <script type="module" src="./src/index.ts"></script>
 </head>
 
 <body>
